--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@
 *.la
 *.a
 *.lib
+*.lock
 
 # Executables
 *.exe
@@ -50,6 +51,8 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+target
+debug
 
 # Environments
 .env
